--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
   },
   "homepage": "https://github.com/MagicMarcos/firebaseVoting#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.0",
     "ejs": "^3.0.2",
     "express": "^4.17.3",
+    "express-oauth2-jwt-bearer": "^1.1.0",
+    "express-openid-connect": "^2.7.2",
     "express-session": "^1.17.2",
     "method-override": "^3.0.0",
+    "moment": "^2.29.3",
     "mongodb": "^4.5.0",
     "mongoose": "^6.3.0",
     "socket.io": "^4.4.1",
